--- a/leetcode_66_Abdullah.ipynb
+++ b/leetcode_66_Abdullah.ipynb
@@ -2,21 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "['1', '2', '4']\n"
+     ]
+    }
+   ],
    "source": [
     "# 66. Plus One\n",
     "# https://leetcode.com/problems/plus-one/\n",
     "# github address: \n",
     "\n",
     "out = []\n",
-    "inputinteger = int(input(\"\"))\n",
-    "plusone = str(inputinteger+1)\n",
+    "num = input()\n",
+    "plusone = str(int(num)+1)\n",
     "for i in plusone:\n",
     "    out.append(i)\n",
     "print(out)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
