--- a/leetcode_66_Abdullah.ipynb
+++ b/leetcode_66_Abdullah.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "# 66. Plus One\n",
     "# https://leetcode.com/problems/plus-one/\n",
-    "# github address: \n",
+    "# github address: https://github.com/abd-bag/leetcode_66_PlusOne\n",
     "\n",
     "out = []\n",
     "num = input()\n",
